src/objects/Host__c.object
<CustomObject>
    <fields>
        <fullName>Fqdn__c</fullName>
        <label>FQDN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IpAddress__c</fullName>
        <externalId>true</externalId>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MACAddress__c</fullName>
        <label>MAC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetBios__c</fullName>
        <label>NetBios</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemType__c</fullName>
        <label>System Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ホスト情報</label>
    <nameField>
        <label>ホスト情報名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>